<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/white"
            android:paddingBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                style="@style/buttons"
                android:layout_marginTop="12dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextContainer"
                style="@style/textInputLayouts"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:endIconDrawable="@drawable/ic_show"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/main_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextContainer"
                app:startIconContentDescription="Password"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    style="@style/editTexts"
                    android:inputType="textPassword"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTextContainer"
                style="@style/textInputLayouts"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameTextContainer"
                app:startIconContentDescription="Email"
                app:startIconDrawable="@drawable/ic_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberText"
                    style="@style/editTexts"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextContainer"
                style="@style/textInputLayouts"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberTextContainer"
                app:startIconContentDescription="Email"
                app:startIconDrawable="@drawable/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    style="@style/editTexts"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameTextContainer"
                style="@style/textInputLayouts"
                android:layout_marginTop="15dp"
                android:hint="@string/surname"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextContainer"
                app:startIconContentDescription="Email"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameText"
                    style="@style/editTexts"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextContainer"
                style="@style/textInputLayouts"
                android:layout_marginTop="68dp"
                android:hint="@string/name"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="Email"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    style="@style/editTexts"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/loginBlackTexts"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="Sign Up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/cerateAccountText"
            style="@style/loginWhiteTexts"
            android:layout_marginTop="24dp"
            android:text="Create \nAccount"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>